Server file basics ready, handling requests next.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(CMAKE_CXX_STANDARD 14)
 #set(CMAKE_REQUIRED_FLAGS -D_GNU_SOURCE gnuXX)
 #set(CMAKE_REQUIRED_FLAGS -std=gnuXX)
 set(CMAKE_REQUIRED_FLAGS -D_POSIX_C_SOURCE=200112L)
+set(CMAKE_CXX_FLAGS -pthread)
 add_definitions(-D_GNU_SOURCE)
 
 
